; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_controller.c_scic_sds_controller_single_vector_interrupt_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_controller.c_scic_sds_controller_single_vector_interrupt_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SMU_ISR_QUEUE_ERROR = common dso_local global i32 0, align 4
@SMU_ISR_QUEUE_SUSPEND = common dso_local global i32 0, align 4
@SMU_ISR_COMPLETION = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @scic_sds_controller_single_vector_interrupt_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scic_sds_controller_single_vector_interrupt_handler(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = inttoptr i64 %6 to i32*
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @SMU_IMR_WRITE(i32* %8, i32 -1)
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @SMU_ISR_READ(i32* %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* @SMU_ISR_QUEUE_ERROR, align 4
  %13 = load i32, i32* @SMU_ISR_QUEUE_SUSPEND, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* %4, align 4
  %16 = and i32 %15, %14
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %28

19:                                               ; preds = %1
  %20 = load i32*, i32** %5, align 8
  %21 = call i64 @scic_sds_controller_completion_queue_has_entries(i32* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %19
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* @SMU_ISR_COMPLETION, align 4
  %26 = call i32 @SMU_ISR_WRITE(i32* %24, i32 %25)
  %27 = load i32, i32* @TRUE, align 4
  store i32 %27, i32* %2, align 4
  br label %39

28:                                               ; preds = %19, %1
  %29 = load i32, i32* %4, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %28
  %32 = load i32, i32* @TRUE, align 4
  store i32 %32, i32* %2, align 4
  br label %39

33:                                               ; preds = %28
  %34 = load i32*, i32** %5, align 8
  %35 = call i32 @SMU_ISR_WRITE(i32* %34, i32 0)
  %36 = load i32*, i32** %5, align 8
  %37 = call i32 @SMU_IMR_WRITE(i32* %36, i32 0)
  %38 = load i32, i32* @FALSE, align 4
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %33, %31, %23
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @SMU_IMR_WRITE(i32*, i32) #1

declare dso_local i32 @SMU_ISR_READ(i32*) #1

declare dso_local i64 @scic_sds_controller_completion_queue_has_entries(i32*) #1

declare dso_local i32 @SMU_ISR_WRITE(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
